# zoom-transcript-summarizer

./: .gitignore  .pre-commit-config.yaml  README.md  docker-compose.yml  pyproject.toml
app/: main.py
app/config/: settings.toml
app/llm/: inference.py
app/llm-legacy/: meeting_summarizer.py
app/models/: request.py  response.py
app/routes/: summarize_router.py
backend/: Dockerfile  README.md  pyproject.toml
backend/app/: main.py
backend/app/api/errors/: http_error.py  validation_error.py
backend/app/api/v1/endpoints/: summarizer.py
backend/app/config/: config.py  settings.toml
backend/app/llm/: inference.py
backend/app/services/: transcript.py
backend/data/: sample_transcript.vtt
backend/tests/: test_main.py
frontend/: Dockerfile  README.md  package-lock.json  package.json
frontend/src/: App.css  App.tsx  config.ts  index.css
frontend/src/components/FileUploader/: FileUploader.tsx
frontend/src/pages/Home/: Home.tsx
frontend/src/services/: api.ts
frontend/src/styles/: theme.ts
notebook/: Fine_tune_Gemma_2B_in_Google_Colab.ipynb
